FIX: Marines bg alignment

--- a/style.css
+++ b/style.css
@@ -383,7 +383,7 @@ p {
     position: relative;
     width: 25%;
     height: 337px;
-    left: 840px;
+    left: 940px;
     top: -555px;
     background: url(./assets/circles.svg);
     background-position: center;
